# c_static_allocated_stack

./: CMakeLists.txt  README.md
src/stack/: CMakeLists.txt  stack.c  stack.cpp  stack.h
test/: queue.cpp  stack.cpp  tests.cpp
